--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2 class="section-title">About Me</h2>
 
             <div class="about-container">
-                <img src= blob:https://www.facebook.com/a451f124-54ae-4d5a-b966-58b0634b5297 class="about-img">.
+                <img src= a7a39b07-5184-4829-8c22-9b53b8d05430.jpg class="about-img">.
 
 
                 <div class="about-text">
@@ -149,4 +149,5 @@
 
 
 </html>
+
 
