--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
 
                 <div class="home-img">
-                <img src= 307a286b-4d55-4ea8-980e-08b61daf8d95.jpg class="home-img">
+                <img src=307a286b-4d55-4ea8-980e-08b61daf8d95.jpg class="home-img">
             </div>
 
         </section>
@@ -149,5 +149,6 @@
 
 
 </html>
+
 
 
