--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h2 class="section-title">About Me</h2>
 
             <div class="about-container">
-                <img src= a7a39b07-5184-4829-8c22-9b53b8d05430.jpg class="about-img">.
+                <img src=a7a39b07-5184-4829-8c22-9b53b8d05430.jpg class="about-img">.
 
 
                 <div class="about-text">
@@ -149,6 +149,7 @@
 
 
 </html>
+
 
 
 
